      invoking a shell when calling man and lexgrog.
    + [CW,NT] Be stricter with missing roff preprocessors by
      setting MANROFFSEQ to the empty string when calling man.
    + [CW,NT] Pass -Tutf8 -Z to man to skip an unused part of
      the groff pipeline.
    + [CW,NT] Use the L::Util gzip decompressor to open gzipped
      manpages.
  * checks/scripts{,.desc}:
    + [NT] Retire check for dpkg-maintscript-helper in preinst.
    + [NT] Fix false positive "executable-not-elf-or-script" when
      the file is an executable hardlink to a script.
  * checks/source-copyright{,.desc}:
    + [NT] Check for possible misspellings of known field
      names.  (Closes: #678639)
  * checks/version-substvars{,.desc}:
    + [JW,NT] Extend version-substvar-for-external-package to
      all relations.  Previously it was only triggered for
      strong dependnecy relations.  (Closes: #658474)

  * collection/objdump-info{-helper,.desc}:
    + [NT] Change the output format for the collection and
      bump the version of the collection accordingly.

  * data/doc-base/sections:
    + [NT] Update section list.  (Closes: #678650)

  * debian/control:
    + [NT] Add (Build-)Depends on libtext-levenshtein-perl.
  * debian/rules:
    + [NT] Add target to generate HTML API doc.  Currently
      this is only run manually.

  * frontend/lintian:
    + [NT] Fix synopsis for --no-cfg option in the help output.
    + [NT] Remove chdir calls for checks.
    + [NT] Retire depreciated command line and config options.
    + [NT] Refactor unpackaging into Lintian::Unpacker.
    + [NT] Make parameter for --jobs optional.  In its absence
      Lintian will not limit the number of parallel jobs.

  * lib/Lintian/Architecture.pm:
    + [NT] Properly handle cases like "linux-amd64" being an
      alias of "amd64".
  * lib/Lintian/Collect{,/Source}.pm:
    + [NT] Add optional parameter to field (and X_field)
      methods that denotes the default value if a field is